--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "url": "https://purpleschool.ru"
   },
   "dependencies": {
-    "axios": "^1.3.3"
+    "axios": "^1.3.3",
+    "chalk": "^5.2.0",
+    "dedent-js": "^1.0.1"
   }
 }
